feat: impl role & permission module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,43 @@
 {
-  "compileOnSave": true,
   "compilerOptions": {
-    "allowJs": false,
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "charset": "utf8",
-    "declaration": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "importHelpers": false,
-    "module": "commonjs",
-    "declarationMap": true,
-    // "declarationDir": "types",
-    "noEmitOnError": false,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": false,
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "strictFunctionTypes": false,
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "allowJs": true,
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "outDir": "dist",
-    "pretty": true,
-    "removeComments": true,
-    "stripInternal": true,
-    "skipDefaultLibCheck": true,
+    "experimentalDecorators": true,
+    "lib": ["dom", "esnext"],
+    "types": ["vite/client"],
+    "typeRoots": ["./node_modules/@types/", "./types"],
+    "noImplicitAny": false,
     "skipLibCheck": true,
-    "target": "es2017",
-    "alwaysStrict": true,
-    "lib": [
-      "es2015",
-      "es6"
-    ],
+    "paths": {
+      "@/*": ["src/*"],
+      "/#/*": ["types/*"]
+    }
   },
   "include": [
-    "functions/**/*",
-    "types/**/*",
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "types/**/*.d.ts",
+    "types/**/*.ts",
+    "build/**/*.ts",
+    "build/**/*.d.ts",
+    "mock/**/*.ts",
+    "components.d.ts",
+    "vite.config.ts"
   ],
-  "exclude": [
-    "tests",
-  ],
+  "exclude": ["node_modules", "dist", "**/*.js"]
 }
