--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   },
   "private": true,
   "scripts": {
-    "bootstrap": "yarn install",
     "serve": "npm run dev",
     "dev": "vite",
     "build": "vite build && esno ./build/script/postBuild.ts",
-    "build:no-cache": "yarn clean:cache && npm run build",
+    "build:no-cache": "npm run clean:cache && npm run build",
     "report": "cross-env REPORT=true npm run build",
     "preview": "npm run build && vite preview",
     "preview:dist": "vite preview",
