--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.142.0",
+    "@kangc/v-md-editor": "^2.3.15",
     "@tinymce/tinymce-vue": "^5",
     "@vicons/antd": "^0.10.0",
     "@vicons/ionicons5": "^0.10.0",
