--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 # 是否开启mock
 VITE_USE_MOCK = true
 
-VITE_APPID = 'rjb00l'
+VITE_APPID = 'cjjd2h'
 
 # 网站根目录
 VITE_PUBLIC_PATH = /
@@ -13,7 +13,7 @@ VITE_BASE_URL = /
 VITE_DROP_CONSOLE = true
 
 # API
-VITE_GLOB_API_URL = https://rjb00l.laf.run
+VITE_GLOB_API_URL = https://cjjd2h.xooio.cn
 
 # 图片上传地址
 VITE_GLOB_UPLOAD_URL=
