--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # 只在开发模式中被载入
 VITE_PORT = 8001
 
-VITE_APPID = 'rjb00l'
+VITE_APPID = 'cjjd2h'
 
 # 网站根目录
 VITE_PUBLIC_PATH = /
@@ -17,7 +17,7 @@ VITE_DROP_CONSOLE = true
 
 # 跨域代理，可以配置多个，请注意不要换行
 #VITE_PROXY = [["/appApi","http://localhost:8001"],["/upload","http://localhost:8001/upload"]]
-VITE_PROXY=[["/api","https://rjb00l.laf.run"]]
+VITE_PROXY=[["/api","https://cjjd2h.xooio.cn"]]
 
 # API 接口地址
 VITE_GLOB_API_URL =
