--- a/.env.production
+++ b/.env.production
@@ -12,6 +12,8 @@ VITE_BASE_URL = /
 # 是否删除console
 VITE_DROP_CONSOLE = true
 
+# LAF
+VITE_GLOB_LAF_URL = https://cjjd2h.xooio.cn
 # API
 VITE_GLOB_API_URL = https://cjjd2h.xooio.cn
 
