--- a/.env.development
+++ b/.env.development
@@ -19,6 +19,8 @@ VITE_DROP_CONSOLE = true
 #VITE_PROXY = [["/appApi","http://localhost:8001"],["/upload","http://localhost:8001/upload"]]
 VITE_PROXY=[["/api","https://cjjd2h.xooio.cn"]]
 
+# LAF
+VITE_GLOB_LAF_URL = https://cjjd2h.xooio.cn
 # API 接口地址
 VITE_GLOB_API_URL =
 
