--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,9 @@ VITE_PORT = 8001
 
 VITE_APPID = 'cjjd2h'
 
+# 日志 (VERBOSE = 0; DEBUG = 1; INFO = 2; WARN = 3; ERROR = 4; NONE = 5;)
+VITE_LOGGER_LEVEL = 0
+
 # 网站根目录
 VITE_PUBLIC_PATH = /
 
