fix:logger level

--- a/.env.development
+++ b/.env.development
@@ -3,9 +3,6 @@ VITE_PORT = 8001
 
 VITE_APPID = 'cjjd2h'
 
-# 日志 (VERBOSE = 0; DEBUG = 1; INFO = 2; WARN = 3; ERROR = 4; NONE = 5;)
-VITE_LOGGER_LEVEL = 0
-
 # 网站根目录
 VITE_PUBLIC_PATH = /
 
@@ -22,6 +19,9 @@ VITE_DROP_CONSOLE = true
 #VITE_PROXY = [["/appApi","http://localhost:8001"],["/upload","http://localhost:8001/upload"]]
 VITE_PROXY=[["/api","https://cjjd2h.xooio.cn"]]
 
+
+# 日志 (VERBOSE = 0; DEBUG = 1; INFO = 2; WARN = 3; ERROR = 4; NONE = 5;)
+VITE_GLOB_LOGGER_LEVEL = 3
 # LAF
 VITE_GLOB_LAF_URL = https://cjjd2h.xooio.cn
 # API 接口地址
