--- a/.env.production
+++ b/.env.production
@@ -3,9 +3,6 @@ VITE_USE_MOCK = true
 
 VITE_APPID = 'cjjd2h'
 
-# 日志 (VERBOSE = 0; DEBUG = 1; INFO = 2; WARN = 3; ERROR = 4; NONE = 5;)
-VITE_LOGGER_LEVEL = 4
-
 # 网站根目录
 VITE_PUBLIC_PATH = /
 
@@ -15,6 +12,9 @@ VITE_BASE_URL = /
 # 是否删除console
 VITE_DROP_CONSOLE = true
 
+
+# 日志 (VERBOSE = 0; DEBUG = 1; INFO = 2; WARN = 3; ERROR = 4; NONE = 5;)
+VITE_GLOB_LOGGER_LEVEL = 4
 # LAF
 VITE_GLOB_LAF_URL = https://cjjd2h.xooio.cn
 # API
