feat:env example

--- a/.env.development.example
+++ b/.env.development.example
@@ -1,7 +1,7 @@
 # 只在开发模式中被载入
 VITE_PORT = 8001
 
-VITE_APPID = 'cjjd2h'
+VITE_APPID = 'appid'
 
 # 网站根目录
 VITE_PUBLIC_PATH = /
@@ -17,13 +17,13 @@ VITE_DROP_CONSOLE = true
 
 # 跨域代理，可以配置多个，请注意不要换行
 #VITE_PROXY = [["/appApi","http://localhost:8001"],["/upload","http://localhost:8001/upload"]]
-VITE_PROXY=[["/api","https://cjjd2h.xooio.cn"]]
+VITE_PROXY=[["/api","https://appid.laf.run"]]
 
 
 # 日志 (VERBOSE = 0; DEBUG = 1; INFO = 2; WARN = 3; ERROR = 4; NONE = 5;)
 VITE_GLOB_LOGGER_LEVEL = 0
 # LAF
-VITE_GLOB_LAF_URL = https://cjjd2h.xooio.cn
+VITE_GLOB_LAF_URL = https://appid.laf.run
 # API 接口地址
 VITE_GLOB_API_URL =
 
