--- a/.env.production.example
+++ b/.env.production.example
@@ -1,7 +1,7 @@
 # 是否开启mock
 VITE_USE_MOCK = true
 
-VITE_APPID = 'cjjd2h'
+VITE_APPID = 'appid'
 
 # 网站根目录
 VITE_PUBLIC_PATH = /
@@ -16,9 +16,9 @@ VITE_DROP_CONSOLE = true
 # 日志 (VERBOSE = 0; DEBUG = 1; INFO = 2; WARN = 3; ERROR = 4; NONE = 5;)
 VITE_GLOB_LOGGER_LEVEL = 4
 # LAF
-VITE_GLOB_LAF_URL = https://cjjd2h.xooio.cn
+VITE_GLOB_LAF_URL = https://appid.laf.run
 # API
-VITE_GLOB_API_URL = https://cjjd2h.xooio.cn
+VITE_GLOB_API_URL = https://appid.laf.run
 
 # 图片上传地址
 VITE_GLOB_UPLOAD_URL=
