--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+# env
+.env.development
+.env.production
+
 # Editor directories and files
 .idea
 .vscode
